added example to attach an agent dynamically to the running JVM